--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -171,8 +171,7 @@ jobs:
           name: mod_assets
           path: mod_assets
 
-      - run: Copy-Item -Path mod_assets -Destination go-app/mod_assets -Recurse -Force
-      - run:  Get-ChildItem -File -Recurse -Path "./mod_assets"
+      - run: Copy-Item -Path mod_assets -Destination go-app -Recurse -Force
       - run:  Get-ChildItem -File -Recurse -Path "go-app/mod_assets"
       - run: |
           $env:VERSION=(Get-Content -Path RELEASE_VERSION -First 1)
@@ -294,6 +293,7 @@ jobs:
           name: mod_assets
           path: mod_assets
       - run: cp -r mod_assets go-app/mod_assets
+      - run: find go-app/mod_assets
       - run: |
           VERSION=$(head -n 1 RELEASE_VERSION)
           cd go-app
