--- a/go-app/mod_assets/manifest.json
+++ b/go-app/mod_assets/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest": [
-    { "path": "dxgi.dll", "action": "copy" },
+    { "path": "dxgi.dll", "action": "delete" },
+    { "path": "xinput1_3.dll", "action": "copy" },
     { "path": "ue4ss_tsw_controller_mod/UE4SS.dll", "action": "copy" },
     { "path": "ue4ss_tsw_controller_mod/UE4SS-settings.ini", "action": "copy" },
     { "path": "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/enabled.txt", "action": "copy" },
