--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -78,7 +78,8 @@ jobs:
 
       - name: Copy proxy generator stub
         run: |
-          Copy-Item -Path RE-UE4SS_stub -Destination RE-UE4SS -Recurse -Force
+          Copy-Item -Path RE-UE4SS_stub/* -Destination RE-UE4SS -Recurse -Force
+          Get-ChildItem -File -Recurse -Path RE-UE4SS
 
       - name: Copy custom mod
         run: |
@@ -94,7 +95,7 @@ jobs:
       - name: Build
         run: |
           cd ./RE-UE4SS
-          xmake f -m "Game__Shipping__Win64" -y --ue4ssProxyPath=C:/Windows/System32/xinput1_3.dll
+          xmake f -m "Game__Shipping__Win64" -y --ue4ssProxyPath=C:/Windows/System32/winmm.dll
           xmake build
 
       - uses: actions/upload-artifact@v4
@@ -105,7 +106,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: ue4ssproxy
-          path: RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/xinput1_3.dll
+          path: RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/winmm.dll
 
       - uses: actions/upload-artifact@v4
         with:
@@ -120,7 +121,7 @@ jobs:
         name: Download previously built artifacts
       - run: |
           mkdir mod_assets
-          install -D ue4ssproxy/xinput1_3.dll mod_assets/xinput1_3.dll
+          install -D ue4ssproxy/winmm.dll mod_assets/winmm.dll
           install -D ue4ssdll/UE4SS.dll mod_assets/ue4ss_tsw_controller_mod/UE4SS.dll
           install -D socketconnectionlib/target/release/tsw_controller_mod_socket_connection.dll mod_assets/ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/tsw_controller_mod_socket_connection.dll
           install -D tswcontrollermod/TSWControllerMod.dll mod_assets/ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/main.dll
