--- a/website/package.json
+++ b/website/package.json
@@ -3,12 +3,22 @@
   "devDependencies": {
     "@apidevtools/json-schema-ref-parser": "^14.2.1",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^24.10.1",
+    "daisyui": "^5.5.4",
+    "solid-js": "^1.9.10",
     "tailwindcss": "^4.1.14",
-    "vite": "^7.1.9"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
+    "vite-plugin-solid": "^2.11.10"
   },
   "scripts": {
     "generate:profile-builder-jsonp-schema": "node ./profile-builder-json-schema/dereference.mjs",
-    "dev": "npm run generate:profile-builder-jsonp-schema && vite dev -c ./vite.config.mjs",
-    "build": "npm run generate:profile-builder-jsonp-schema && vite build -c ./vite.config.mjs"
+    "dev": "npm run generate:profile-builder-jsonp-schema && vite dev -c ./vite.config.ts",
+    "build": "npm run generate:profile-builder-jsonp-schema && vite build -c ./vite.config.ts"
+  },
+  "dependencies": {
+    "@modular-forms/solid": "^0.25.1",
+    "clsx": "^2.1.1",
+    "valibot": "^1.1.0"
   }
 }
