feat: replace images and update website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,11 @@
     "memory_resource": "cpp",
     "numbers": "cpp",
     "semaphore": "cpp",
-    "stop_token": "cpp"
+    "stop_token": "cpp",
+    "xstring": "cpp",
+    "xlocale": "cpp",
+    "ranges": "cpp",
+    "coroutine": "cpp",
+    "source_location": "cpp"
   }
 }
