--- a/go-app/frontend/package.json
+++ b/go-app/frontend/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "@json-editor/json-editor": "^2.15.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "install": "^0.13.0",
     "just-debounce": "^1.1.0",
     "just-throttle": "^4.2.0",
+    "npm": "^11.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
