--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -215,7 +215,7 @@ jobs:
 
       - name: Install RobotGo dependencies
         run: |
-          sudo apt-get install -y libx11-dev xorg-dev libxtst-dev xsel xclip libpng++-dev xcb libxcb-xkb-dev x11-xkb-utils libx11-xcb-dev libxkbcommon-x11-dev libxkbcommon-dev libgtk-3-dev libwebkit2gtk-4.0-dev
+          sudo apt-get install -y libx11-dev xorg-dev libxtst-dev xsel xclip libpng++-dev xcb libxcb-xkb-dev x11-xkb-utils libx11-xcb-dev libxkbcommon-x11-dev libxkbcommon-dev libgtk-3-dev libwebkit2gtk-4.1-dev
 
       - name: Setup Go 1.24.5
         uses: actions/setup-go@v5
@@ -236,7 +236,7 @@ jobs:
       - run: |
           VERSION=$(head -n 1 RELEASE_VERSION)
           cd go-app
-          wails build -ldflags="-X 'main.VERSION=$VERSION'"
+          wails build -tags webkit2_41 -ldflags="-X 'main.VERSION=$VERSION'"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -256,7 +256,7 @@ jobs:
           Section: utils
           Priority: optional
           Architecture: amd64
-          Depends: libwebkit2gtk-4.0-37, libgtk-3-0, libsdl2-2.0-0
+          Depends: libwebkit2gtk-4.1-0, libgtk-3-0, libsdl2-2.0-0
           Maintainer: L Martens <hi@liammartens.com>
           Description: TSW Controller App
           EOF
